# anthropic-sdk-python

./: .gitignore  .python-version  .release-please-manifest.json  .stats.yml  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Claude generated plan.md  LICENSE  README.md  SECURITY.md  agents.txt  api.md  helpers.md  issue_1022_comment.md  issue_1112_comment.md  mypy.ini  noxfile.py  pr_1112_body.md  pr_body.md  pyproject.toml  release-please-config.json  test_pydantic_by_alias.py  test_quick.py  tools.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  create-releases.yml  detect-breaking-changes.yml  handle-release-pr-title-edit.yml  lint-pr.yml  open-release-prs.yml  publish-pypi.yml  pylint.yml  release-doctor.yml  release.yml
anthropic/: __init__.py  api.py  constants.py  tokenizer.py
anthropic-cpp-sdk/: ARCHITECTURE.md  AnthropicSDK.sln  AnthropicSDK.vcxproj  AnthropicSDK.vcxproj.filters  BUILDING.md  IMPLEMENTATION_STATUS.md  README.md
anthropic-cpp-sdk/examples/: basic_message.cpp
anthropic-cpp-sdk/include/anthropic/: client.hpp
anthropic-cpp-sdk/src/anthropic/: client.cpp
docs/: Plan-836.md  review-836.md
example/: example.cpp  example.vcxproj  example.vcxproj.filters
examples/: .keep  agents.py  agents_comprehensive.py  agents_with_files.py  arithmetic_calc.py  auto_compaction.py  azure.py  basic_async.py  basic_async_stream.py  basic_stream.py  basic_sync.py  batch_rate_limit.py  batch_results.py  bedrock.py  code_execution_file_download.py  count_tokens.py  data.csv  demo_async.py  demo_litellm.py  demo_sync.py  fallbacks.py  google_cloud.py  greeting-SKILL.md  images.py  managed-agents-observe-tool-calls.py  managed-agents-self-hosted-sandbox-worker.py  managed-agents-streaming-deltas-manual.py  managed-agents-worker-dispatch.py  mcp.py  mcp_agent_trust_twzrd.py  mcp_tool_runner.py  messages.py  messages_stream.py  messages_stream_handler.py  mtls.py  mtls_proxy.py  offline_mode_example.py  prompt_caching.py  skills_from_zip.py  streaming.py  (+20 more)
examples/helpers/: conversation_example.py
examples/memory/: basic.py
rpg_game/: README.md  character.py  combat.py  game.py  items.py  test_game.py  world.py
scripts/: bootstrap  detect-breaking-changes.py  format  lint  mock  test
scripts/utils/: ruffen-docs.py  upload-artifact.sh
src/anthropic/: __init__.py  _base_client.py  _base_exceptions.py  _client.py  _compat.py  _constants.py  _exceptions.py  _files.py  _heuristics.py  _legacy_response.py  _middleware.py  _models.py  _qs.py  _request.py  _resource.py  _response.py  _streaming.py  _tokenizers.py  _types.py  _version.py  pagination.py
src/anthropic/_decoders/: jsonl.py
src/anthropic/_utils/: __init__.py  _httpx.py  _logs.py  _proxy.py  _reflection.py  _streams.py  _sync.py  _transform.py  _typing.py  _utils.py
src/anthropic/helpers/: __init__.py  conversation.py
src/anthropic/lib/: .keep  __init__.py  _files.py  _retry.py  _scoped_client.py  _stainless_helpers.py  _thinking.py  foundry.md  foundry.py
src/anthropic/resources/: __init__.py  completions.py  messages.py  models.py
src/anthropic/tools/: __init__.py  memory.py
src/anthropic/types/: __init__.py  anthropic_beta_param.py  base64_image_source_param.py  base64_pdf_source_param.py  beta_api_error.py  beta_authentication_error.py  beta_billing_error.py  beta_error.py  beta_error_response.py  beta_gateway_timeout_error.py  beta_invalid_request_error.py  beta_not_found_error.py  beta_overloaded_error.py  beta_permission_error.py  beta_rate_limit_error.py  cache_control_ephemeral_param.py  capability_support.py  citation_char_location.py  citation_char_location_param.py  citation_content_block_location.py  citation_content_block_location_param.py  citation_page_location.py  citation_page_location_param.py  citation_search_result_location_param.py  citations_config_param.py  citations_delta.py  citations_search_result_location.py  code_execution_tool_20250522_param.py  code_execution_tool_20250825_param.py  code_execution_tool_20260120_param.py  code_execution_tool_20260521_param.py  completion.py  completion_create_params.py  content_block.py  content_block_delta_event.py  content_block_param.py  content_block_source_content_param.py  content_block_source_param.py  content_block_start_event.py  content_block_stop_event.py  (+91 more)
tests/: TEST_COVERAGE_IMPROVEMENTS.md  conftest.py  sample_file.txt  test_api.py  test_client.py  test_deepcopy.py  test_exceptions.py  test_extract_files.py  test_files.py  test_heuristic.py  test_httpx2_client.py  test_imports.py  test_legacy_response.py  test_middleware.py  test_models.py  test_pagination.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_streaming_errors.py  test_tokenizer.py  test_tool_search_result_block.py  test_tool_search_tool_result_block.py  test_tool_use.py  test_transform.py  utils.py
tests/api_resources/: test_completions.py  test_messages.py  test_models.py  test_top_level.py
tests/api_resources/beta/: test_agents.py  test_deployment_runs.py  test_deployments.py  test_dreams.py  test_environments.py  test_files.py  test_memory_stores.py  test_messages.py  test_models.py  test_output_format_conversion.py  test_sessions.py  test_skills.py  test_tunnels.py  test_user_profiles.py  (+2 more)
tests/decoders/: test_jsonl.py
tests/helpers/: test_conversation.py
tests/integration/: test_messages_integration.py
tests/lib/: snapshots.py  test_aws.py  test_aws_auth.py  test_azure.py  test_bedrock.py  test_bedrock_async_thread.py  test_bedrock_auth.py  test_bedrock_mantle.py  test_bedrock_stream_decoder.py  test_credentials.py  test_files.py  test_google_cloud.py  test_google_cloud_live.py  test_refusal_fallback.py  test_refusal_fallback_streaming.py  test_retry.py  test_scoped_client.py  test_stainless_helpers.py  test_thinking.py  test_vertex.py  utils.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_logs.py  test_path.py  test_proxy.py  test_reflection.py  test_sync.py  test_typing.py  test_utils.py
(+907 files in other folders)
